<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_root"
    android:visibility="gone"
    tools:visibility="visible"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="157dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="154dp"
            android:src="@drawable/dummy_avatar" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_avatar"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:text="@string/searchbar_hint"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:text="@string/app_name"
            android:layout_below="@+id/tv_username"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:textSize="12sp"
            android:textStyle="normal" />

        <LinearLayout
            android:id="@+id/linear_root_followers"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:paddingVertical="5dp"
            android:layout_marginTop="8dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/tv_followers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_followings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textAlignment="center"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_root_bio"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_root_followers"
            android:layout_marginTop="8dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/bio"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/bio"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_root_company"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_root_bio"
            android:paddingVertical="5dp"
            android:layout_marginTop="8dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" >

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_gmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/gmail"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_root_location"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_root_company"
            android:paddingVertical="5dp"
            android:layout_marginTop="8dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" >

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_twitter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/twitter"
                android:textAlignment="center"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/linear_root_location"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:background="?attr/colorPrimary" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_below="@+id/tabs"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>
</ScrollView>